app-a/ch18/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-blue-svc
  namespace: production-apps
  labels:
    version: blue
spec:
  selector:
    app: app-blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
