app-a/ch18/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-green-svc
  namespace: production-apps
  labels:
    version: green
spec:
  selector:
    app: app-green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
